--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header
   display: flex;
   justify-content: space-between;
   align-items: center;
+  backdrop-filter: blur(10px);
  
    
 
@@ -40,10 +41,12 @@ header
 /* .header.active{
     width: calc(100% - 500px);;
 } */
-/* .showcase.active
+.showcase.active
 {
   right: 300px;
-} */
+}
+ 
+ 
 header .logo
 {
   color: #fff;
@@ -63,7 +66,7 @@ header .logo
   cursor: pointer;
   
 }
-/* .toggle.active
+.toggle.active
 {
   background: url(https://i.ibb.co/rt3HybH/close.png);
   background-repeat: no-repeat;
@@ -71,12 +74,13 @@ header .logo
   background-position: center;
   cursor: pointer;
    
-} */
+}
 /* meni */
-/* .manu.active{
+.manu.active{
     right: 300px;
-} */
-/* .menu
+    z-index: 1;
+}
+.menu
 {
   position: fixed;
   top: 0;
@@ -91,28 +95,41 @@ header .logo
 .menu ul
 {
   position: fixed;
+ 
 }
 .menu ul li
 {
   list-style: none;
+ 
 }
 .menu ul li a
 {
   text-decoration: none;
   font-size: 30px;
-  color: white;
+   color: white;
+ 
 }
 .menu ul li a:hover
 {
   color: #1d1102dc; 
+ 
+} 
+ 
+.chr{
+  visibility: hidden;
+ 
 }
-  */
+.chr.active{
+  visibility: visible;
+ 
+}
 /* =================== */
 
 
 a {
 	text-decoration: none;
 	color: var(--primary-color);
+ 
 }
 
 h1 {
@@ -187,10 +204,18 @@ h1 {
 	transform: scale(0.98);
 }
 
+.nako.active{
+  margin-right: 300px;
+  padding-left: 0 ;
+}
+.nako{
+  padding-left: 100px;
+}
 
 
 #about {
-    padding-left: 100px;
+  
+     
     padding-right: 100px;
 	padding-top: 40px;
   padding-bottom: 40px;
@@ -207,6 +232,7 @@ h1 {
     background-size: cover;
 
     max-width: 100vw;
+    z-index: 1;
  
 }
 #about .col{
@@ -217,31 +243,24 @@ h1 {
   height: 650px;
   -webkit-box-align: center;
   align-items: center;
+  z-index: 1;
 }
 #about .txt{
  
  text-align: center;
   -webkit-box-align: center;
   align-items: center;
-  margin: auto;
+  /* margin: auto; */
  
 }
 
-#about .pho{
-   
- position:relative;
  
-  /* padding-left: 100px; */
-  margin: auto;
-
-  
-}
-
 
 
  
 .grid {
   margin-top: 80px;
+  z-index: 1;
   
 }
 
@@ -294,14 +313,17 @@ h1 {
 
 /* footer */
 
+ 
 
 .container{
 	max-width: 1170px;
 	margin:auto;
+  right: 500px;
 }
 .row{
 	display: flex;
 	flex-wrap: wrap;
+   
 }
 ul{
 	list-style: none;
@@ -372,10 +394,18 @@ ul{
     width: 50%;
     margin-bottom: 30px;
 }
+.showcase.active
+{
+  right: 800px;
+}
 }
 @media(max-width: 574px){
   .footer-col{
     width: 100%;
+}
+.showcase.active
+{
+  right: 800px;
 }
 }
  
