--- a/gal/styleGal.css
+++ b/gal/styleGal.css
@@ -1,17 +1,76 @@
+/* galer */
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ 
 }
+
+
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	line-height: 1.5;
+    background-color: black;
+}
+
+
+
 .header{
-  background-color: #22160B;
-  color: white;
-  text-align: center;
-  position:fixed;
-  width: 100%;
-  height: 50px;
-  /* opacity: 0.9; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin-left: 100px;
+  margin-right: 100px;
+  border-bottom: 1px solid white;
+  width: calc(100% - 200px);
+  padding-top: 40px;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  backdrop-filter: blur(10px);
+ 
+   
 }
+ 
+
+
+header .logo
+{
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 3em;
+}
+
+
+.toggle
+{
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url(https://i.ibb.co/HrfVRcx/menu.png);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+  
+}
+.toggle.active
+{
+  background: url(https://i.ibb.co/rt3HybH/close.png);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
+   
+}
+
+
+
 .back{
   position: fixed;
   left: 5px;
@@ -25,9 +84,15 @@
   
 }
 
+.grid.active{
+  margin-right: 300px;
+}
+
  
 .grid {
+   
   padding: 1em;
+  padding-top: 200px;
   background-image: url("../poz.jpg");
 
 }
@@ -95,22 +160,7 @@
   background-image: url("album/photo13.jpg");
 }
 
-@media screen and (max-width: 1100px) {
-  .item {
-    flex: 1 1 100%;
-  }
-}
-/* @media screen and (min-width: 768px) {
-  .item {
-    flex: 1 1 33.333%;
-  }
-}
-@media screen and (min-width: 980px) {
-  .item {
-    flex: 1 1 25%;
-  }
-} */
-
+ 
 
 .container{
 	max-width: 1170px;
@@ -123,6 +173,13 @@
 ul{
 	list-style: none;
 }
+
+
+/* footer */
+
+
+
+
 .footer{
 	background-color: #22160B;
     padding: 70px 0;
@@ -183,6 +240,78 @@ ul{
 	background-color: #ffffff;
 }
 
+ 
+
+
+/* meni */
+
+
+
+.menu
+{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+.menu ul
+{
+  position: fixed;
+ 
+}
+.menu ul li
+{
+  list-style: none;
+ 
+}
+.menu ul li a
+{
+  text-decoration: none;
+  font-size: 30px;
+   color: white;
+ 
+}
+.menu ul li a:hover
+{
+  color: #1d1102dc; 
+ 
+} 
+ 
+.chr{
+  visibility: hidden;
+ 
+}
+.chr.active{
+  visibility: visible;
+ 
+}
+/* =================== */
+
+
+
+
+.manu.active{
+  right: 300px;
+  z-index: 1;
+}
+
+.grid.active{
+margin-right: 300px;
+}
+
+
+.footer.active{
+margin-right: 300px;
+}
+
+
+
+
 /*responsive*/
 @media(max-width: 1100px){
   .footer-col{
@@ -195,3 +324,48 @@ ul{
     width: 100%;
 }
 }
+
+
+@media screen and (max-width: 1100px) {
+  .item {
+    flex: 1 1 100%;
+  }
+
+  .manu.active{
+    right: 600px;
+    
+  }
+  
+  .grid.active{
+  margin-right: 600px;
+  }
+  
+  
+  .footer.active{
+  margin-right: 600px;
+  }
+
+  .menu ul li a
+  {
+  text-decoration: none;
+  font-size: 50px;
+   color: white;
+ 
+  }
+
+
+
+
+}
+/* @media screen and (min-width: 768px) {
+  .item {
+    flex: 1 1 33.333%;
+  }
+}
+@media screen and (min-width: 980px) {
+  .item {
+    flex: 1 1 25%;
+  }
+} */
+
+
