--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+ 
+ /* home */
+ 
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 :root {
@@ -41,10 +44,6 @@ header
 /* .header.active{
     width: calc(100% - 500px);;
 } */
-.showcase.active
-{
-  right: 300px;
-}
  
  
 header .logo
@@ -76,10 +75,8 @@ header .logo
    
 }
 /* meni */
-.manu.active{
-    right: 300px;
-    z-index: 1;
-}
+
+ 
 .menu
 {
   position: fixed;
@@ -204,10 +201,7 @@ h1 {
 	transform: scale(0.98);
 }
 
-.nako.active{
-  margin-right: 300px;
-  padding-left: 0 ;
-}
+ 
 .nako{
   padding-left: 100px;
 }
@@ -235,16 +229,7 @@ h1 {
     z-index: 1;
  
 }
-#about .col{
  
-  text-align: center;
- vertical-align: middle;
-  width: 800px;
-  height: 650px;
-  -webkit-box-align: center;
-  align-items: center;
-  z-index: 1;
-}
 #about .txt{
  
  text-align: center;
@@ -261,26 +246,13 @@ h1 {
 .grid {
   margin-top: 80px;
   z-index: 1;
+ 
   
 }
 
-@media only screen and (min-device-width: 1100px) {
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-  }
-}
+ 
 
 
-@media only screen and (max-device-width: 1099px) {
-  .grid {
-    display: block;
-    
-  }
-
-  #about {
-   padding:0px; 
-}
 #about .col{
  
   text-align: center;
@@ -290,6 +262,8 @@ h1 {
   -webkit-box-align: center;
   align-items: center;
   margin:auto;
+ 
+ 
 }
  
 #about .txt{
@@ -312,13 +286,14 @@ h1 {
 }
 
 /* footer */
-
  
 
 .container{
+ 
 	max-width: 1170px;
 	margin:auto;
-  right: 500px;
+  right: 300px;
+ 
 }
 .row{
 	display: flex;
@@ -388,24 +363,112 @@ ul{
 	background-color: #ffffff;
 }
 
+
+
+
+
+
+
+.showcase.active
+{
+  right: 300px;
+}
+ 
+.manu.active{
+    right: 300px;
+    z-index: 1;
+}
+
+.nako.active{
+  margin-right: 300px;
+  padding-left: 0 ;
+}
+
+ .footer.active{
+  margin-right: 300px;
+ }
+
+
+
+
+
+
+
 /*responsive*/
+
+
+
+
+@media screen and (max-width: 1100px) {
+
+  
+
+.showcase.active
+{
+  right: 600px;
+}
+ 
+.manu.active{
+    right: 600px;
+    z-index: 1;
+}
+
+.nako.active{
+  margin-right: 600px;
+  padding-left: 0 ;
+}
+
+ .footer.active{
+  margin-right: 600px;
+}
+.grid.active{
+  visibility: hidden;
+}
+
+.menu ul li a
+  {
+  text-decoration: none;
+  font-size: 50px;
+   color: white;
+ 
+  }
+
+
+}
+
+
+
 @media(max-width: 1100px){
   .footer-col{
     width: 50%;
     margin-bottom: 30px;
 }
-.showcase.active
-{
-  right: 800px;
-}
+ 
 }
 @media(max-width: 574px){
-  .footer-col{
-    width: 100%;
-}
-.showcase.active
-{
-  right: 800px;
-}
+    .footer-col{
+      width: 100%;
+  }
+  .showcase.active
+  {
+    right: 600px;
+  }
 }
  
+
+
+@media only screen and (min-device-width: 1651px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+
+
+@media only screen and (max-device-width: 10650px) {
+  .grid {
+    display: block;
+  }
+  #about {
+   padding:0px; 
+}
