--- a/nujic/style.css
+++ b/nujic/style.css
@@ -100,7 +100,7 @@
   }
   
   @media(min-width: 1100px){
-	#cont{
+	.cont{
 		padding-left: 200px;
 		padding-right: 200px;
 	}
@@ -301,9 +301,9 @@ ul{
   margin-right: 300px;
   }
 
-.nuic-page.active{
+ .nuic-page.active{
 	margin-right: 300px;
-}
+} 
 
 
   
@@ -327,12 +327,18 @@ ul{
 		margin-right: 600px;
 	}
 	.nuic-page.active{
-		/* margin-right: 600px; */
+		margin-right: 600px;
+		 
+	}
+	.cont.active{
 		visibility: hidden;
 	}
 	.yvideo{
 		width: 600px;
 		height: 340px;
+	}
+	.menu{
+		width: 600px;
 	}
 	
 
@@ -346,6 +352,12 @@ ul{
 }
 .nuic-page.active{
 	margin-right: 600px;
+	 
+}
+.cont.active{
 	visibility: hidden;
+}
+.menu{
+	width: 600px;
 }
 }
