--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ h1 {
 
 .video-container:after {
 	content: '';
-	z-index: 1;
+	z-index: 2;
 	height: 100%;
 	width: 100%;
 	top: 0;
@@ -195,6 +195,7 @@ h1 {
 	border: solid #fff 1px;
 	margin-top: 25px;
 	opacity: 0.7;
+  z-index: 3;
 }
 
 .btn:hover {
@@ -226,7 +227,7 @@ h1 {
     background-size: cover;
 
     max-width: 100vw;
-    z-index: 1;
+ 
  
 }
  
@@ -245,7 +246,7 @@ h1 {
  
 .grid {
   margin-top: 80px;
-  z-index: 1;
+  z-index: 2;
  
   
 }
@@ -376,7 +377,7 @@ ul{
  
 .manu.active{
     right: 300px;
-    z-index: 1;
+    z-index: 0;
 }
 
 .nako.active{
@@ -410,7 +411,7 @@ ul{
  
 .manu.active{
     right: 600px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .nako.active{
@@ -435,6 +436,7 @@ ul{
 
 
 }
+ 
 
 
 
@@ -444,8 +446,12 @@ ul{
     margin-bottom: 30px;
 }
 .menu{
-	width: 600px;
+	width: 100px;
+
 }
+ .menu.active{
+  width: 600px;
+ }
  
 }
 @media(max-width: 574px){
@@ -457,8 +463,12 @@ ul{
     right: 600px;
   }
   .menu{
-    width: 600px;
+    width: 100px;
+  
   }
+   .menu.active{
+    width: 600px;
+   }
 }
  
 
@@ -480,5 +490,14 @@ ul{
    padding:0px; 
 }
 .menu{
-	width: 600px;
-}}
+	width: 100px;
+
+}
+ .menu.active{
+  width: 600px;
+ }
+
+
+
+
+}
