--- a/style-index.css
+++ b/style-index.css
@@ -7,15 +7,48 @@ h1{
 }
 
 
+
+
+@media(max-width:991px){
+ 
+    .cont-preporuka{ 
+        flex-direction: column;
+       
+      
+    }
+    .kvadrat{
+        height: 500px;
+        width: 600px;
+        margin-bottom: 50px;
+     
+    
+    }
+
+}
+
+
 .cont-preporuka{
     display: flex;
+   
     max-width: 1600px;
     margin: auto;
     margin-top: 20px;
     font-size: 13pt;
   
 }
+.kvadrat{
+    height: 500px;
+    width: 500px;
+    padding: 20px;
+    position: relative;
+    box-shadow: 5px 5px 5px rgba(0,0,0, .2);
+    border: 2px solid rgba(0,0,0, .1);
+    z-index: 10;
+    text-align: center;
+    word-spacing: 0.25em;
+ 
 
+}
 .kvadrat{
     height: 500px;
     width: 500px;
